--- a/Office365StarterProject/App.xaml
+++ b/Office365StarterProject/App.xaml
@@ -11,7 +11,9 @@
         <SolidColorBrush x:Key="HyperLinkBrush" Color="#FFECE4FF" />
         <SolidColorBrush x:Key="ApplicationPageBackgroundThemeBrush" Color="#1799F0" />
         <x:String x:Key="ProgressBarIndeterminateForegroundThemeBrush">White</x:String>
-
+        <x:String x:Key="ida:ClientID">45ad1ae4-4c92-4923-8dc3-0d16374f6d63</x:String>
+        <x:String x:Key="ida:AADInstance">https://login.microsoftonline.com/</x:String>
+        <x:String x:Key="ida:Domain">projecttripoddev.onmicrosoft.com</x:String>
     </Application.Resources>
 </Application>
 <!--
